apps/query-derive/tests/ui/geo_not_sortable.stderr
error[E0277]: the trait bound `Geo: Sortable` is not satisfied
  --> tests/ui/geo_not_sortable.rs:13:13
   |
13 |         .by(User::location(), SortOrder::Asc)
   |          -- ^^^^^^^^^^^^^^^^ the trait `Sortable` is not implemented for `Geo`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `Sortable`:
             flusso_query::Bool<S>
             flusso_query::Date<S>
             flusso_query::Keyword<S, Sub>
             flusso_query::Number<K, S>
             flusso_query::Text<S>
note: required by a bound in `SortBuilder::by`
  --> $WORKSPACE/apps/query/src/handles/sort.rs
   |
   |     pub fn by<H: Sortable>(mut self, handle: H, dir: impl Into<MaybeOrderBy>) -> Self {
   |                  ^^^^^^^^ required by this bound in `SortBuilder::by`
